<resources>
    <string name="app_name">TD2</string>
    <string name="category_image">Location image</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="sign_in">Sign In</string>
    <string name="status">Status</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="After">After: %1$s.</string>
    <string name="Deadline">Deadline: %1$s</string>
    <string name="Recycles">Recycles: %1$s</string>
    <string name="Priority">PRI: %1$d</string>
    <string name="Benefit">BEN: %1$d</string>
    <string name="Consequences">CON: %1$d</string>
    <string name="Days">DAYS: %1$s</string>
    <string name="Location">Location: %1$d</string>
    <string name="weather">Weather: %1$d</string>
    <string name="Earliest">Earliest: %1$s</string>
    <string name="Latest">Latest: %1$s</string>
    <string name="WLA">WLA %1$d</string>
    <string name="import_tdf">Import TDF</string>
    <string name="import_json">Import JSON</string>
    <string name="export_json">Export JSON</string>
    <string name="export_TDF">ExportTDF</string>
    <string-array name="locations">
        <item>Anywhere</item>
        <item>Home</item>
        <item>Work</item>
    </string-array>
</resources>
