<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_signin"
        android:title="@string/sign_in"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import_TDF"
        android:title="@string/import_tdf"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export_TDF"
        android:title="@string/export_json"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_import_JSON"
        android:title="@string/import_json"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export_JSON"
        android:title="@string/export_json"
        app:showAsAction="ifRoom" />
</menu>